<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    android:background="@drawable/bg_round_shape"
    android:layout_margin="10dp"
    android:elevation="2dp"
    >

    <TextView
        android:id="@+id/itemTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/username"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/itemTextView"
        android:text="@string/personname"
        app:layout_constraintTop_toBottomOf="@id/itemTextView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:text="@string/email"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:text="@string/phone"
        app:layout_constraintTop_toBottomOf="@id/emailTextView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/websiteTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:text="@string/website"
        app:layout_constraintTop_toBottomOf="@id/phoneTextView"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameTextView"
        android:text="@string/address"
        app:layout_constraintTop_toBottomOf="@id/websiteTextView"
        tools:ignore="MissingConstraints" />
</android.support.constraint.ConstraintLayout>